--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="MauiAndroidScrollViewBug.AppShell"
+    x:Class="MauiAndroidListViewBug.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MauiAndroidScrollViewBug"
+    xmlns:local="clr-namespace:MauiAndroidListViewBug"
     Shell.FlyoutBehavior="Disabled"
-    Title="MauiAndroidScrollViewBug">
+    Title="MauiAndroidListViewBug">
 
     <ShellContent
         Title="Home"
