--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiAndroidScrollViewBug"
-             x:Class="MauiAndroidScrollViewBug.MainPage"
+             xmlns:local="clr-namespace:MauiAndroidListViewBug"
+             x:Class="MauiAndroidListViewBug.MainPage"
              x:DataType="local:MainPageViewModel">
 
     <Grid RowDefinitions="*,Auto,Auto"
