--- a/Platforms/Windows/App.xaml
+++ b/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="MauiAndroidScrollViewBug.WinUI.App"
+    x:Class="MauiAndroidListViewBug.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:MauiAndroidScrollViewBug.WinUI">
+    xmlns:local="using:MauiAndroidListViewBug.WinUI">
 
 </maui:MauiWinUIApplication>
